// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html-template-literals.js - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const nestedFun = /* HTML */ \`\${outerExpr(1)}
  <script>
    const tpl = html\\\`<div>\\\${innerExpr(1)} \${outerExpr(2)}</div>\\\`;
  </script>\`;

const nestedFun2 = /* HTML */ \`\${outerExpr(1)}
  <script>
    const tpl = html\\\`\\\\n<div>\\\${innerExpr(1)} \${outerExpr(2)}</div>\\\\n\\\`;
  </script>\`;

setFoo(
  html\`<div>one</div>
    <div>two</div>
    <div>three</div>\`,
  secondArgument
);

setFoo(
  html\`<div>
      <div>nested</div>
    </div>
    <div>two</div>
    <div>three</div>\`,
  secondArgument
);

setFoo(
  html\`<div>
    <div>nested</div>
  </div>\`,
  secondArgument
);

=====================================output=====================================
const nestedFun = /* HTML */ \`
  \${outerExpr(1)}
  <script>
    const tpl = html\\\`
      <div>\\\${innerExpr(1)} \${outerExpr(2)}</div>
    \\\`;
  </script>
\`;

const nestedFun2 = /* HTML */ \`
  \${outerExpr(1)}
  <script>
    const tpl = html\\\`
      <div>\\\${innerExpr(1)} \${outerExpr(2)}</div>
    \\\`;
  </script>
\`;

setFoo(
  html\`
    <div>one</div>
    <div>two</div>
    <div>three</div>
  \`,
  secondArgument
);

setFoo(
  html\`
    <div>
      <div>nested</div>
    </div>
    <div>two</div>
    <div>three</div>
  \`,
  secondArgument
);

setFoo(
  html\`
    <div>
      <div>nested</div>
    </div>
  \`,
  secondArgument
);

================================================================================
`;

exports[`html-template-literals.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const nestedFun = /* HTML */ \`\${outerExpr(1)}
  <script>
    const tpl = html\\\`<div>\\\${innerExpr(1)} \${outerExpr(2)}</div>\\\`;
  </script>\`;

const nestedFun2 = /* HTML */ \`\${outerExpr(1)}
  <script>
    const tpl = html\\\`\\\\n<div>\\\${innerExpr(1)} \${outerExpr(2)}</div>\\\\n\\\`;
  </script>\`;

setFoo(
  html\`<div>one</div>
    <div>two</div>
    <div>three</div>\`,
  secondArgument
);

setFoo(
  html\`<div>
      <div>nested</div>
    </div>
    <div>two</div>
    <div>three</div>\`,
  secondArgument
);

setFoo(
  html\`<div>
    <div>nested</div>
  </div>\`,
  secondArgument
);

=====================================output=====================================
const nestedFun = /* HTML */ \`\${outerExpr(1)}
  <script>
    const tpl = html\\\`<div>\\\${innerExpr(1)} \${outerExpr(2)}</div>\\\`;
  </script>\`;

const nestedFun2 = /* HTML */ \`\${outerExpr(1)}
  <script>
    const tpl = html\\\` <div>\\\${innerExpr(1)} \${outerExpr(2)}</div> \\\`;
  </script>\`;

setFoo(
  html\`<div>one</div>
    <div>two</div>
    <div>three</div>\`,
  secondArgument
);

setFoo(
  html\`<div>
      <div>nested</div>
    </div>
    <div>two</div>
    <div>three</div>\`,
  secondArgument
);

setFoo(
  html\`<div>
    <div>nested</div>
  </div>\`,
  secondArgument
);

================================================================================
`;

exports[`lit-html.js - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import { LitElement, html } from '@polymer/lit-element';

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String }
    };
  }

  constructor() {
    super();
    this.mood = 'happy';
  }

  render() {
    return html\`
      <style
      
      
      >
                  .mood { color: green; }
      </style
      
      
      
      >

         Web            Components         are     <span 
      
      
      class="mood"      >\${
        this.mood
      
      }</span
      
           >!
    \`;
  }
}

customElements.define('my-element', MyElement);

const someHtml1 = html\`<div       > hello \${world} </div     >\`;
const someHtml2 = /* HTML */ \`<div      > hello \${world} </div     >\`;

html\`\`

html\`<my-element obj=\${obj}></my-element>\`;

html\`  <\${Footer}  >footer      content<//     >  \`

html\`  <div />  \`

html\`
  <div />
\`

html\`<span>one</span><span>two</span><span>three</span>\`;

function HelloWorld() {
  return html\`
    <h3>Bar List</h3>
    \${bars.map(bar => html\`
       <p>\${bar}</p>
    \`)}
  \`;
}

const trickyParens = html\`<script> f((\${expr}) / 2); </script>\`;
const nestedFun = /* HTML */ \`\${outerExpr( 1 )} <script>const tpl = html\\\`<div>\\\${innerExpr( 1 )} \${outerExpr( 2 )}</div>\\\`</script>\`;

const closingScriptTagShouldBeEscapedProperly = /* HTML */ \`
  <script>
    const html = /* HTML */ \\\`<script><\\\\/script>\\\`;
  </script>
\`;

const closingScriptTag2 = /* HTML */ \`<script>const  scriptTag='<\\\\/script>'; <\\/script>\`;

html\`
 <div style="
 \${ foo}
"></div>
\`
html\`
 <div style=\${ 
  foo
 }></div>
\`

html\`<div style="   color : red;
            display    :inline ">
  </div>\`

html\`<div style="   color : red;
\${ foo}
            display    :inline ">
  </div>\`
html\`<div style="   color : red;
\${ foo}:\${bar};
            display    :inline ">
  </div>\`

=====================================output=====================================
import { LitElement, html } from "@polymer/lit-element";

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String },
    };
  }

  constructor() {
    super();
    this.mood = "happy";
  }

  render() {
    return html\`
      <style>
        .mood {
          color: green;
        }
      </style>

      Web Components are
      <span class="mood">\${this.mood}</span>
      !
    \`;
  }
}

customElements.define("my-element", MyElement);

const someHtml1 = html\`
  <div>hello \${world}</div>
\`;
const someHtml2 = /* HTML */ \`
  <div>hello \${world}</div>
\`;

html\`\`;

html\`
  <my-element obj=\${obj}></my-element>
\`;

html\`
  <\${Footer}>footer content<//>
\`;

html\`
  <div />
\`;

html\`
  <div />
\`;

html\`
  <span>one</span>
  <span>two</span>
  <span>three</span>
\`;

function HelloWorld() {
  return html\`
    <h3>Bar List</h3>
    \${bars.map(
      (bar) => html\`
        <p>\${bar}</p>
      \`
    )}
  \`;
}

const trickyParens = html\`
  <script>
    f((\${expr}) / 2);
  </script>
\`;
const nestedFun = /* HTML */ \`
  \${outerExpr(1)}
  <script>
    const tpl = html\\\`
      <div>\\\${innerExpr(1)} \${outerExpr(2)}</div>
    \\\`;
  </script>
\`;

const closingScriptTagShouldBeEscapedProperly = /* HTML */ \`
  <script>
    const html = /* HTML */ \\\`
      <script><\\\\/script>
    \\\`;
  </script>
\`;

const closingScriptTag2 = /* HTML */ \`
  <script>
    const scriptTag = "<\\\\/script>";
  </script>
\`;

html\`
  <div
    style="
 \${foo}
"
  ></div>
\`;
html\`
  <div style=\${foo}></div>
\`;

html\`
  <div
    style="   color : red;
            display    :inline "
  ></div>
\`;

html\`
  <div
    style="   color : red;
\${foo}
            display    :inline "
  ></div>
\`;
html\`
  <div
    style="   color : red;
\${foo}:\${bar};
            display    :inline "
  ></div>
\`;

================================================================================
`;

exports[`lit-html.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import { LitElement, html } from '@polymer/lit-element';

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String }
    };
  }

  constructor() {
    super();
    this.mood = 'happy';
  }

  render() {
    return html\`
      <style
      
      
      >
                  .mood { color: green; }
      </style
      
      
      
      >

         Web            Components         are     <span 
      
      
      class="mood"      >\${
        this.mood
      
      }</span
      
           >!
    \`;
  }
}

customElements.define('my-element', MyElement);

const someHtml1 = html\`<div       > hello \${world} </div     >\`;
const someHtml2 = /* HTML */ \`<div      > hello \${world} </div     >\`;

html\`\`

html\`<my-element obj=\${obj}></my-element>\`;

html\`  <\${Footer}  >footer      content<//     >  \`

html\`  <div />  \`

html\`
  <div />
\`

html\`<span>one</span><span>two</span><span>three</span>\`;

function HelloWorld() {
  return html\`
    <h3>Bar List</h3>
    \${bars.map(bar => html\`
       <p>\${bar}</p>
    \`)}
  \`;
}

const trickyParens = html\`<script> f((\${expr}) / 2); </script>\`;
const nestedFun = /* HTML */ \`\${outerExpr( 1 )} <script>const tpl = html\\\`<div>\\\${innerExpr( 1 )} \${outerExpr( 2 )}</div>\\\`</script>\`;

const closingScriptTagShouldBeEscapedProperly = /* HTML */ \`
  <script>
    const html = /* HTML */ \\\`<script><\\\\/script>\\\`;
  </script>
\`;

const closingScriptTag2 = /* HTML */ \`<script>const  scriptTag='<\\\\/script>'; <\\/script>\`;

html\`
 <div style="
 \${ foo}
"></div>
\`
html\`
 <div style=\${ 
  foo
 }></div>
\`

html\`<div style="   color : red;
            display    :inline ">
  </div>\`

html\`<div style="   color : red;
\${ foo}
            display    :inline ">
  </div>\`
html\`<div style="   color : red;
\${ foo}:\${bar};
            display    :inline ">
  </div>\`

=====================================output=====================================
import { LitElement, html } from "@polymer/lit-element";

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String },
    };
  }

  constructor() {
    super();
    this.mood = "happy";
  }

  render() {
    return html\`
      <style>
        .mood {
          color: green;
        }
      </style>

      Web Components are <span class="mood">\${this.mood}</span>!
    \`;
  }
}

customElements.define("my-element", MyElement);

const someHtml1 = html\`<div>hello \${world}</div>\`;
const someHtml2 = /* HTML */ \`<div>hello \${world}</div>\`;

html\`\`;

html\`<my-element obj=\${obj}></my-element>\`;

html\` <\${Footer}>footer content<//> \`;

html\` <div /> \`;

html\` <div /> \`;

html\`<span>one</span><span>two</span><span>three</span>\`;

function HelloWorld() {
  return html\`
    <h3>Bar List</h3>
    \${bars.map((bar) => html\` <p>\${bar}</p> \`)}
  \`;
}

const trickyParens = html\`<script>
  f((\${expr}) / 2);
</script>\`;
const nestedFun = /* HTML */ \`\${outerExpr(1)}
  <script>
    const tpl = html\\\`<div>\\\${innerExpr(1)} \${outerExpr(2)}</div>\\\`;
  </script>\`;

const closingScriptTagShouldBeEscapedProperly = /* HTML */ \`
  <script>
    const html = /* HTML */ \\\`<script><\\\\/script>\\\`;
  </script>
\`;

const closingScriptTag2 = /* HTML */ \`<script>
  const scriptTag = "<\\\\/script>";
</script>\`;

html\`
  <div
    style="
 \${foo}
"
  ></div>
\`;
html\` <div style=\${foo}></div> \`;

html\`<div
  style="   color : red;
            display    :inline "
></div>\`;

html\`<div
  style="   color : red;
\${foo}
            display    :inline "
></div>\`;
html\`<div
  style="   color : red;
\${foo}:\${bar};
            display    :inline "
></div>\`;

================================================================================
`;

exports[`lit-html-svg.js - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import { LitElement, html, svg } from '@polymer/lit-element';

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String }
    };
  }

  constructor() {
    super();
    this.mood = 'happy';
  }

    render() {
      return html\`
<header>
                    <p>This is HTML</p>
              </header>
        \${svg\`
          <?xml version="1.0" encoding="UTF-8" standalone="no"?>
          <svg
    id="some-svg"
                  xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 125 70"
            version="1.1"
          ><defs>
              <path
                id="poly"
                d="m 0,10 20,10 20,-10 -20,-10 z"
                style="stroke:#000000;stroke-width:0.2px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
              ></path>
              </defs>
              </svg>\`}
              <footer>
              
              Good  bye</footer>
              \`;
      }
}

customElements.define('my-element', MyElement);


=====================================output=====================================
import { LitElement, html, svg } from "@polymer/lit-element";

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String },
    };
  }

  constructor() {
    super();
    this.mood = "happy";
  }

  render() {
    return html\`
      <header>
        <p>This is HTML</p>
      </header>
      \${svg\`
        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
        <svg
          id="some-svg"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 125 70"
          version="1.1"
        >
          <defs>
            <path
              id="poly"
              d="m 0,10 20,10 20,-10 -20,-10 z"
              style="stroke:#000000;stroke-width:0.2px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
            ></path>
          </defs>
        </svg>
      \`}
      <footer>Good bye</footer>
    \`;
  }
}

customElements.define("my-element", MyElement);

================================================================================
`;

exports[`lit-html-svg.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import { LitElement, html, svg } from '@polymer/lit-element';

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String }
    };
  }

  constructor() {
    super();
    this.mood = 'happy';
  }

    render() {
      return html\`
<header>
                    <p>This is HTML</p>
              </header>
        \${svg\`
          <?xml version="1.0" encoding="UTF-8" standalone="no"?>
          <svg
    id="some-svg"
                  xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 125 70"
            version="1.1"
          ><defs>
              <path
                id="poly"
                d="m 0,10 20,10 20,-10 -20,-10 z"
                style="stroke:#000000;stroke-width:0.2px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
              ></path>
              </defs>
              </svg>\`}
              <footer>
              
              Good  bye</footer>
              \`;
      }
}

customElements.define('my-element', MyElement);


=====================================output=====================================
import { LitElement, html, svg } from "@polymer/lit-element";

class MyElement extends LitElement {
  static get properties() {
    return {
      mood: { type: String },
    };
  }

  constructor() {
    super();
    this.mood = "happy";
  }

  render() {
    return html\`
      <header>
        <p>This is HTML</p>
      </header>
      \${svg\` <?xml version="1.0" encoding="UTF-8" standalone="no"?>
        <svg
          id="some-svg"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 125 70"
          version="1.1"
        >
          <defs>
            <path
              id="poly"
              d="m 0,10 20,10 20,-10 -20,-10 z"
              style="stroke:#000000;stroke-width:0.2px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
            ></path>
          </defs>
        </svg>\`}
      <footer>Good bye</footer>
    \`;
  }
}

customElements.define("my-element", MyElement);

================================================================================
`;
